# flashlight_tensor

./: Cargo.toml  LICENSE  README.md  benchmark.md
.github/workflows/: rust.yml
examples/: bench_back_bias.rs  bench_back_gradient.rs  bench_back_weights.rs  bench_buffers_runner.rs  bench_forward.rs  bench_matmul.rs  matmul_comparison.rs  ml_bench_cpu.rs  ml_runner_bench_gpu.rs  runner_overflow.rs
src/: lib.rs  main.rs  prelude.rs  tensor.rs
src/cpu/: mod.rs
src/cpu/broadcasting/: helpers.rs  mod.rs  operations.rs
src/cpu/machine_learning/: mod.rs  relu.rs  sigmoid.rs
src/cpu/math/: addition.rs  division.rs  functions.rs  multiplication.rs  subtraction.rs
src/cpu/subtypes/: helpers.rs  matrix.rs  mod.rs  vector.rs
src/operations/: iterative.rs  matrix.rs  mod.rs  vector.rs
src/operations/machine_learning/: activations.rs
src/tests/cpu/: additional.rs  creation.rs  subtypes.rs
src/tests/wgpu/: subtypes.rs
src/wgpu/: mod.rs
src/wgpu/broadcasting/: broadcast_add.wgsl  broadcast_div.wgsl  broadcast_mul.wgsl  broadcast_sub.wgsl
src/wgpu/machine_learning/: backward_bias_grad.wgsl  backward_bias_grad_no_activ.wgsl  backward_bias_grad_relu.wgsl  backward_bias_grad_sigmoid.wgsl  backward_input_grad_no_activ.wgsl  backward_input_grad_relu.wgsl  backward_input_grad_sigmoid.wgsl  backward_weight_grad.wgsl  backward_weight_grad_no_activ.wgsl  backward_weight_grad_relu.wgsl  backward_weight_grad_sigmoid.wgsl  backward_weights_grad.wgsl  forward_sigmoid.wgsl  matmul_a_activation.wgsl  relu.wgsl  sigmoid.wgsl  weight_bias_merge.wgsl
src/wgpu/math/: addition.rs  mod.rs
src/wgpu/runners/: gpu_buffers.rs  gpu_data.rs  gpu_runner.rs  helpers.rs  mod.rs  sample.rs  shaders.rs
tests/cpu/: additional.rs  creation.rs  mod.rs  subtypes.rs
tests/wgpu/: mod.rs  subtypes.rs
(+105 files in other folders)
