[package]
name = "flashlight_tensor"
version = "0.4.4"
edition = "2024"
authors = ["Maciej Bejmowicz <bejmach@gmail.com>"]
description = "gpu/cpu tensor library focused around matrix and neural network operations"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Bejmach/flashlight_tensor"
homepage = "https://github.com/Bejmach/flashlight_tensor"
documentation = "https://docs.rs/flashlight_tensor"


[dependencies]
bytemuck = "1.23.0"
pollster = "0.4.0"
rand = "0.9.1"
wgpu = "25.0.0"

[dev-dependencies]
tokio = { version = "1.44.2", features = ["full"] }
